[package]
name = "mygdb"
description = "simple implementation of gdb"
version = "0.1.0"
authors = ["sak96 <26397224+sak96@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17.0"
rustyline = "7.1.0"
structopt = "0.3.21"
